# esp32-ble-guitar

./: .gitignore  CMakeLists.txt  README.md  platformio.ini
components/BleXInput/: CMakeLists.txt
components/BleXInput/include/: BleConnectionStatus.h  BleHostConfiguration.h  BleXInputDeviceManager.h  Callback.h  XboxDescriptors.h  XboxGamepadConfiguration.h  XboxGamepadDevice.h
components/BleXInput/src/: BleConnectionStatus.cpp  BleXInputDeviceManager.cpp  XboxGamepadConfigurations.cpp  XboxGamepadDevice.cpp
components/Input/: CMakeLists.txt
components/Input/include/: ConfigManager.h  GuitarHeroAdapter.h  InputManager.h
components/Input/src/: ConfigManager.cpp  GuitarHeroAdapter.cpp  InputManager.cpp
lib/BleXInput/: library.json
lib/BleXInput/src/: BleConnectionStatus.cpp  BleHostConfiguration.cpp  BleXInputDeviceManager.cpp  XboxGamepadConfiguration.cpp  XboxGamepadDevice.cpp
lib/Input/: library.json
lib/Input/src/: GuitarHeroAdapter.cpp
main/: CMakeLists.txt  idf_component.yml  main.cpp
src/: main.cpp
